--- a/article-content.html
+++ b/article-content.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文章頁面</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-e2c73107.js"></script>
+  <script type="module" crossorigin src="/Dream-Workshop/assets/_commonjsHelpers-725317a4.js"></script>
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-bf5094f6.js"></script>
   <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
 </head>
 
