--- a/discuss.html
+++ b/discuss.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>討論區</title>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-e2c73107.js"></script>
+  <script type="module" crossorigin src="/Dream-Workshop/assets/_commonjsHelpers-725317a4.js"></script>
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-bf5094f6.js"></script>
   <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
 </head>
 
