--- a/login/register-member/create-account.html
+++ b/login/register-member/create-account.html
@@ -6,7 +6,8 @@
     <title>註冊會員</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaTioPzWJ0h8cCw2WLLQpG2L1z4lg3FL2jvoLIweDvffp8EGFKzGpqp1E0i" crossorigin="anonymous">
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-e2c73107.js"></script>
+  <script type="module" crossorigin src="/Dream-Workshop/assets/_commonjsHelpers-725317a4.js"></script>
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-bf5094f6.js"></script>
   <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
 </head>
 <body>
