--- a/admin/admin-page.html
+++ b/admin/admin-page.html
@@ -1123,7 +1123,7 @@ tabindex="-1">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/admin/admin-page.js"></script>
+    <script src="./assets/js/admin/admin-page.js"></script>
     
   </body>
 </html>
