--- a/login/fotget-password/fotget-password-step3.html
+++ b/login/fotget-password/fotget-password-step3.html
@@ -146,7 +146,8 @@
         </div>
         <small class="px-3 px-lg-0 text-gray-400">© Dream Workshop 2024 Copyright. All Rights Reserved.</small>
     </div>   
-</footer>    <script src="/js/password.js"></script>
+</footer>    
+    <script src="./assets/js/password.js"></script>
     
 </body>
 </html>
