--- a/post-article.html
+++ b/post-article.html
@@ -6,7 +6,6 @@
     <title>發表文章</title>
   <script type="module" crossorigin src="/Dream-Workshop/assets/_commonjsHelpers-725317a4.js"></script>
   <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-bf5094f6.js"></script>
-  <script type="module" crossorigin src="./assets/js/editor.js"></script>
   <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
 </head>
 
@@ -164,6 +163,8 @@
     </div>   
 </footer>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/editor.js"></script>
+
     
 </body>
 </html>
