--- a/post-article.html
+++ b/post-article.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
     <link rel="stylesheet" href="https://cdn.ckeditor.com/ckeditor5/34.1.0/classic/themes/lark.css">
     <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-bf5094f6.js"></script>
-    <script type="module" src="./assets/js/editor.js"></script>
+    <script type="module" src="https://cdn.ckeditor.com/ckeditor5/34.1.0/classic/ckeditor.js"></script>
+    <script type="module" src="https://emmacodeya.github.io/Dream-Workshop/assets/js/editor.js"></script>
 </head>
 
 
