--- a/pages/login/fotget-password/fotget-password-step1.html
+++ b/pages/login/fotget-password/fotget-password-step1.html
@@ -33,7 +33,7 @@
     
    
     <%- include('./layout/footer'); -%>
-    <script src="/js/password.js"></script>
+    <script src="/assets/js/password.js"></script>
     <script type="module" src="/main.js"></script>
 </body>
 </html>
