--- a/pages/login/fotget-password/fotget-password-step3.html
+++ b/pages/login/fotget-password/fotget-password-step3.html
@@ -40,7 +40,7 @@
     </div>
    
     <%- include('./layout/footer'); -%>
-    <script src="/js/password.js"></script>
+    <script src="/assets/js/password.js"></script>
     <script type="module" src="/main.js"></script>
 </body>
 </html>
