--- a/activity.html
+++ b/activity.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>活動</title>
   <script type="module" crossorigin src="/Dream-Workshop/assets/_commonjsHelpers-725317a4.js"></script>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-bf5094f6.js"></script>
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-c3c2cf05.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-82050cca.js"></script>
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-804e097b.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 <nav class="header navbar navbar-expand-lg fixed-top">
 <div class="container d-flex justify-content-center">
     <div class="d-flex justify-content-between align-items-center me-auto">
-      <a class="navbar-brand" href="/pages/index.html">
+      <a class="navbar-brand" href="index.html">
         <img
           src="/Dream-Workshop/assets/創夢工坊-logo-fb8def81.png"
           alt="創夢工坊"
@@ -58,8 +58,8 @@
         </li>
         <li class="nav-item text-end">
           <a
-      href="/pages/login/login.html"
-      class="btn login-btn btn-primary-600 d-lg-none mt-8">
+      href="login.html"
+      class="btn login-btn btn-primary-600 d-lg-none mt-8 mt-lg">
       註冊/登入
     </a>
         </li>
@@ -67,7 +67,7 @@
     </div>
 
     <a
-      href="/pages/login/login.html"
+      href="login/login.html"
       class="btn login-btn btn-primary-600 d-none d-lg-block"
     >
       註冊/登入
@@ -129,7 +129,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity-casper.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">查看詳情</a>
+                <a href="activity-casper.html" class="btn btn-primary-600  py-lg-3 py-2 px-4">查看詳情</a>
               </div>
             </div>
           </div>
@@ -150,7 +150,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">查看詳情</a>
+                <a href="activity.html" class="btn btn-primary-600  py-lg-3 py-2 px-4">查看詳情</a>
               </div>
             </div>
           </div>
@@ -171,7 +171,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">查看詳情</a>
+                <a href="activity.html" class="btn btn-primary-600  py-lg-3 py-2 px-4">查看詳情</a>
               </div>
             </div>
           </div>
@@ -192,7 +192,7 @@
                 </div>
               </div>
               <div class="col-md-3 d-flex flex-column flex-lg-row justify-content-center">
-                <a href="activity.html" class="btn btn-primary-600 fw-bolder py-lg-3 py-2 px-4">查看詳情</a>
+                <a href="activity.html" class="btn btn-primary-600  py-lg-3 py-2 px-4">查看詳情</a>
               </div>
             </div>
           </div>
@@ -211,7 +211,7 @@
                     </a>
                     
                     <h3 class="fw-bold mb-5">Dream Workshop</h3>
-                    <ul class="d-flex justify-content-center justify-content-lg-start">
+                    <ul class="d-flex justify-content-center justify-content-sm-start justify-content-md-start">
                         <li><a href="#"><i class="icons bi bi-facebook me-3"></i></a></li>
                         <li><a href="#"><i class="icons bi bi-instagram me-3"></i></a></li>
                         <li><a href="#"><i class="icons bi bi-line"></i></a></li>
