--- a/pages/investor-information.html
+++ b/pages/investor-information.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>謝阿金</title>
 </head>
 <body>
     <%- include('./layout/header'); -%>
